# Fractal-Image-Generator

./: BitMap.cpp  CMakeLists.txt  FractalCreator.cpp  FractalCreator.hpp  Mandelbrot.cpp  main.cpp
